# whereami

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  ExtraMakefile  Makefile.am  README.md  configure.ac  whereami.pc.in
_gnu-make/: Makefile
_ios-xcode/: WhereAmI-Info.plist
_ios-xcode/WhereAmI.xcodeproj/: project.pbxproj
_win-vs12/: .gitignore  Executable.vcxproj  Library.vcxproj
_win-vs14/: .gitignore
doc/: whereami.1  whereami.3  whereami.texi
example/: CMakeLists.txt  executable.c  executable.cpp  library.c  library.cpp
pkgconfig/: whereami.pc.in  whereamipp.pc.in
src/: CMakeLists.txt  Makefile.am  whereami++.cpp  whereami++.h  whereami.c  whereami.h
